[workspace]
resolver = "2"
members = [
  "crates/dos-core",
  "crates/dos-server",
  "crates/dos-client",
  "crates/dosctl",
  "crates/dos-fuse",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
