[package]
name = "dos-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dos-core = { path = "../dos-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

reqwest = { version = "0.12", features = ["json", "stream"] }
