[package]
name = "dos-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dos-core = { path = "../dos-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
http = "1"
bytes = "1"
mime = "0.3"
anyhow = "1"
blake3 = "1"
