[package]
name = "dosctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dos-core = { path = "../dos-core" }
dos-client = { path = "../dos-client" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

clap = { version = "4", features = ["derive"] }
anyhow = "1"
